DVBSTP 패킷 파싱하고 CRC 체크하는 중 - 현재는 crc 값이 예상과 달리 packet 값과 맞지 않는 상태

--- a/style/packetparser.css
+++ b/style/packetparser.css
@@ -1,3 +1,6 @@
+body {
+    background-color: #FFD;
+}
 
 table, td, th {
     border-collapse: collapse;
@@ -15,6 +18,10 @@ td {
 
 textarea {
     width: "100%";
+}
+
+.comment {
+    color: lightgray;
 }
 
 .result td {
